Fix JVM argument merging in BenchmarkRunner; ensure experimental flags are preserved